--- a/views/paper.html
+++ b/views/paper.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/assets/lambda/fonts/roboto/roboto.css?family=Roboto:400,300,100,100italic,300italic,400italic,700,700italic">
     <link rel="stylesheet" href="{{index .mix "/assets/lambda/css/vendor.css"}}">
     <link rel="stylesheet" href="{{index .mix "/assets/lambda/css/paper.css"}}">
-    {{template "meta"}}
+    {{template "meta" .}}
     {{template "styles" .}}
 </head>
 <body>
